--- a/src/Settings/css/Settings.css
+++ b/src/Settings/css/Settings.css
@@ -4,7 +4,6 @@
     height: 100%;
     top: 0;
     right: -100% !important;
-    background-color: #ffe1e1;
     transform: rotateY(90deg);
     transform-origin: left;
     display: flex;
@@ -102,6 +101,10 @@
 
 .settings-form label:not(:last-of-type) {
     margin-bottom: 6.5%;
+}
+
+.settings-light {
+    background-color: #ffe1e1;
 }
 
 .settings-dark {
